Remove video overlay and fix email form on mobile.

--- a/new/css/default.css
+++ b/new/css/default.css
@@ -1109,19 +1109,4 @@ html, body {
 		margin: 0;
 	}
 }
-
-.overlay {
-	background: transparent url("../img/overlay.png");
-	opacity: 0.5;
-	z-index: 0;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	z-index: 3;
-	-webkit-user-select: none;
-	 -khtml-user-select: none;
-	   -moz-user-select: none;
-	    -ms-user-select: none;
-	        user-select: none;		
-}
 #homedevice {height:100%; display:none; background-image: url("../img/bg.jpg"); background-size: cover;}
