--- a/new/css/responsive.css
+++ b/new/css/responsive.css
@@ -155,7 +155,7 @@
 	.img-spacer {width: 300px; margin-top: 0;}
 	.img-spacer img {width: 300px;}
 	.img-item {display: none;}
-	.footer-container {width: 300px;}
+	.footer-container {width: 90%;}
 	.s-container {width: 360px}
 	.sl-element {width: 180px;}
 	.p-image-01 {margin-left: -150px; width: 300px;}
